packages/typ/tests/fixtures/diagnostics/0607_functor_generative_constructor_mismatch_06.ml.infer.expected
File "0607_functor_generative_constructor_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0607_functor_generative_constructor_mismatch_06 is not a valid module name.

File "0607_functor_generative_constructor_mismatch_06.ml", line 8, characters 19-27:
8 | let _ : B_zeta.t = A_zeta.T
                       ^^^^^^^^
Error: The constructor A_zeta.T belongs to the variant type A_zeta.t
       but a constructor was expected belonging to the variant type B_zeta.t
